TrainingDefinitionRestController tests updated